# prototype3

./: .env.example  .gitignore  .uv-config  README.md  analysis_result.txt  analysis_result__manual.txt  analysis_results.txt  batch_runner.py  evaluate_agent_output.ipynb  phoenix_quickstart.py  pyproject.toml  run_flow.py  safe_crewai.bat  setup.py  simple_phoenix_test.py  test_phoenix.py  test_phoenix_direct.py
OLD/: data_tools.py  pandas_query_tool copy 2.py  pandas_query_tool copy 3.py  pandas_query_tool copy.py
architecture_diagrams/: 0_Main_Simplified_Interaction_Diagram.md  1_Execution_Flow_Diagram.md  2_Data_Processing_Sequence.md  3_State_and_Component_Relationships.md  4_Detailed_Data_and_Prompt_Flow.md  6a_CodeViz.md  6b_CodeViz.md
data/: OBY01PDT01 - Copy.csv  OBY01PDT01.csv
metadata/: OBY01PDT01_metadata.json
src/prototype3/: __init__.py  batch_processor.py  main.py  phoenix_integration.py  safe_launcher.py  tracing.py
src/prototype3/crews/data_analysis_crew/: data_analysis_crew.py
src/prototype3/crews/data_analysis_crew/config/: agents.yaml  tasks.yaml
src/prototype3/crews/data_analysis_crew/tools/: pandas_query_tool.py
src/prototype3/tools/: path_debug.py
src/prototype3/utils/: path_utils.py
utilities/: PROMPT_TEMPLATE.txt  dynamic_parallel_dataframe_llm_processor.py  input.csv  output.csv
