[project]
name = "prototype3"
version = "0.1.0"
description = "prototype3 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
]

[project.scripts]
kickoff = "prototype3.main:kickoff"
plot = "prototype3.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
python_path = ".venv\\Scripts\\python.exe"  # Using Windows path format
